--- a/htdocs/_docs/modules/statics/index.html
+++ b/htdocs/_docs/modules/statics/index.html
@@ -8,7 +8,7 @@
 <h2>文字サイズ</h2>
 
 <div class="unit">
-<table class="def">
+<table class="def" style="width:100%;">
 	<thead>
 		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
 	</thead>
@@ -29,7 +29,7 @@
 <h2>文字組み</h2>
 
 <div class="unit">
-<table class="def">
+<table class="def" style="width:100%;">
 	<thead>
 		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
 	</thead>
@@ -45,7 +45,7 @@
 <h2>回り込み制御</h2>
 
 <div class="unit">
-<table class="def">
+<table class="def" style="width:100%;">
 	<thead>
 		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
 	</thead>
@@ -87,7 +87,7 @@
 <h2>その他</h2>
 
 <div class="unit">
-<table class="def">
+<table class="def" style="width:100%;">
 	<thead>
 		<tr><th>モジュール名称</th><th>用途</th><th>サンプル</th></tr>
 	</thead>
