--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -41,7 +41,7 @@
 	<dt><a href="./parts/">パーツモジュール</a></dt>
 		<dd>パーツモジュールは、ユニットモジュール内に入れ込んで使うことができます。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。スタティックモジュールと異なり、ある程度複雑な構造のパーツが含まれます。</dd>
 	<dt><a href="./units/">ユニットモジュール</a></dt>
-		<dd>ユニットモジュールは、水平貫通の矩形ブロックで、上下に適切なマージンを与えられた概念です。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
+		<dd>ユニットモジュールは、水平貫通(コンテンツ領域に対して幅100%)の矩形ブロックで、上下に適切なマージンを与えられた概念です。パーツモジュールを内包する入れ物のような役割を果たします(ただし、ユニットモジュール内にユニットモジュールを配置することはできません)。端末の状態(スクリーンの幅など)に合わせて、スタイルが変化する場合があります。</dd>
 </dl>
 
 
