コーディング規則ページの内容を更新。 - モジュール名称について、"定義リスト" は "定義・説明リスト" に変更。HTML5の新しい定義に従って。 - 文字セット・改行コードを追加した。 - ターゲットデバイスについての考え方を追加した。 - "必要以上の規則は作業効率を下げる" という旨の文を追加した。

--- a/htdocs/_docs/modules/index.html
+++ b/htdocs/_docs/modules/index.html
@@ -19,17 +19,22 @@
 </p>
 
 
-<h3>モジュール設計方針</h3>
+<h3>コーディング規則の設計方針</h3>
 <p>
-	モジュールは、次の方針に基づいて設計します。<br />
+	コーディング規則は、次の方針に基づいて設計します。<br />
 </p>
 <ul>
-	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、管理者が全体を効率よく管理できることを主目的として設計する。</li>
-	<li>学習しやすさを重視し、可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
-	<li>初めてドキュメントを読む人に負担をかけないよう、なるべくドキュメントの分量を圧縮できるように設計する。</li>
+	<li>少数(多くの場合1人)の管理者と、大勢のコンテンツ制作者との間の約束事であり、<strong>管理者が全体を効率よく管理できることを主目的として設計する</strong>。</li>
+	<li><strong>学習しやすさを重視する</strong>。可能な限り、素のHTMLの構造のままでマークアップできるように設計する。</li>
+	<li>なるべく<strong>ドキュメントの分量を圧縮できるように設計する</strong>。初めてドキュメントを読む人に負担をかけないよう配慮する。また、必要以上の規則を設けることは、個々人の作業効率を下げてしまう原因となる。</li>
 </ul>
 
 
+<h3>ターゲットデバイスについての考え方</h3>
+
+<p>
+	ターゲットデバイスの種類については、意識しない(=<strong>マルチデバイスに対応できるように設計する</strong>)ものとします。<br />
+</p>
 
 <h2>共通モジュール</h2>
 
@@ -45,6 +50,17 @@
 </dl>
 
 
+<h2>文字セットと改行コード</h2>
+
+<h3>文字セット</h3>
+<p>
+	テキスト系のファイルタイプ全般において、文字セットは UTF-8(BOMなし) で統一します。<br />
+</p>
+
+<h3>改行コード</h3>
+<p>
+	テキスト系のファイルタイプ全般において、改行コードは CRLF で統一します。<br />
+</p>
 
 
 <h2>命名規則</h2>
