--- a/htdocs/_docs/modules/parts/index.html
+++ b/htdocs/_docs/modules/parts/index.html
@@ -182,50 +182,50 @@
 </div><!-- /.unit -->
 
 
-<h2> 定義リスト</h2>
+<h2> 定義・説明リスト</h2>
 
-<h3>通常の定義リスト</h3>
+<h3>通常の定義・説明リスト</h3>
 
 <dl>
 	<dt>定義語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 	<dt>定義語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 	<dt>定義語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 </dl>
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;dl&gt;
 	&lt;dt&gt;定義語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 	&lt;dt&gt;定義語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 	&lt;dt&gt;定義語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 &lt;/dl&gt;
 </textarea></div>
 </div><!-- /.unit -->
 
 
-<h3>注釈定義リスト .notes</h3>
+<h3>注釈定義・説明リスト .notes</h3>
 
 <dl class="notes">
 	<dt>※1 語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 	<dt>※2 語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 	<dt>※3 語句</dt>
-		<dd>説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。</dd>
+		<dd>定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。</dd>
 </dl>
 
 <div class="unit">
 	<div class="code"><textarea readonly="readonly">&lt;dl class=&quot;notes&quot;&gt;
 	&lt;dt&gt;※1 語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 	&lt;dt&gt;※2 語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 	&lt;dt&gt;※3 語句&lt;/dt&gt;
-		&lt;dd&gt;説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。説明や解説テキスト。&lt;/dd&gt;
+		&lt;dd&gt;定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。定義や説明テキスト。&lt;/dd&gt;
 &lt;/dl&gt;
 </textarea></div>
 </div><!-- /.unit -->
